Fix bad display of background images on mobile devices

--- a/css/style.css
+++ b/css/style.css
@@ -176,6 +176,16 @@ p {
 	border-color: var(--dark-grey);
 }
 
+/* BACKGROUND IMAGES */
+
+.jumbotron,
+.quotes,
+.feature {
+	background-position: center;
+	background-size: cover;
+	background-repeat: no-repeat;
+}
+
 /* ==== HEADER ==== */
 
 .header {
@@ -293,7 +303,7 @@ p {
 	display: flex;
 	justify-content: center;
 	align-items: center;
-	background: #000 url("../images/jumbotron_bg.jpg") no-repeat 0/cover;
+	background-image: url("../images/jumbotron_bg.jpg");
 	position: relative;
 }
 
@@ -356,7 +366,7 @@ p {
 
 .quotes {
 	padding: 12rem 0;
-	background: #fff url("../images/background-2_02.jpg") no-repeat 0/cover;
+	background-image: url("../images/background-2_02.jpg");
 }
 
 .quotes-slider {
@@ -594,12 +604,12 @@ p {
 /* ==== FEATURE ==== */
 
 .feature {
-	background: #000 url("../images/background-1.jpg") no-repeat 0/cover;
+	background-image: url("../images/background-1.jpg");
 	padding: 8rem 0;
 }
 
 .feature .section--heading {
-	text-align: center;
+	margin-bottom: 0;
 	color: var(--white-color);
 }
 
